[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/GameUI/Inventory/Item.gd" type="Script" id=1]
[ext_resource path="res://scenes/Game/Entity/Item/EmptyBottle/EmptyBottle.png" type="Texture" id=2]
[ext_resource path="res://fonts/NES_23.tres" type="DynamicFont" id=3]

[node name="Item" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
script = ExtResource( 1 )

[node name="ItemImage" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 4

[node name="Amount" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -40.0
margin_top = -18.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_as_outline = 2
text = "123"
align = 2
[connection signal="gui_input" from="." to="." method="_on_Item_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_Item_mouse_entered"]
